--- a/www/font.css
+++ b/www/font.css
@@ -6,8 +6,44 @@
 
 @font-face {
 	font-family: sf display;
+	font-weight: 700;
+	src: url(/local/fonts/SF-UI-Display-Bold.otf)
+}
+
+@font-face {
+	font-family: sf display;
+	font-weight: 800;
+	src: url(/local/fonts/SF-UI-Display-Heavy.otf)
+}
+
+@font-face {
+	font-family: sf display;
+	font-weight: 200;
+	src: url(/local/fonts/SF-UI-Display-Light.otf)
+}
+
+@font-face {
+	font-family: sf display;
+	font-weight: 500;
+	src: url(/local/fonts/SF-UI-Display-Medium.otf)
+}
+
+@font-face {
+	font-family: sf display;
+	font-weight: 400;
+	src: url(/local/fonts/SF-UI-Display-Regular.otf)
+}
+
+@font-face {
+	font-family: sf display;
 	font-weight: 600;
 	src: url(/local/fonts/SF-UI-Display-Semibold.otf)
+}
+
+@font-face {
+	font-family: sf display;
+	font-weight: 300;
+	src: url(/local/fonts/SF-UI-Display-Thin.otf)
 }
 
 @font-face {
@@ -45,6 +81,12 @@
 @font-face {
 	font-family: sf text;
 	font-weight: 200;
+	src: url(/local/fonts/SF-UI-Text-Light.otf)
+}
+
+@font-face {
+	font-family: sf text;
+	font-weight: 200;
 	font-style: italic;
 	src: url(/local/fonts/SF-UI-Text-LightItalic.otf)
 }
@@ -52,8 +94,20 @@
 @font-face {
 	font-family: sf text;
 	font-weight: 500;
+	src: url(/local/fonts/SF-UI-Text-Medium.otf)
+}
+
+@font-face {
+	font-family: sf text;
+	font-weight: 500;
 	font-style: italic;
 	src: url(/local/fonts/SF-UI-Text-MediumItalic.otf)
+}
+
+@font-face {
+	font-family: sf text;
+	font-weight: 400;
+	src: url(/local/fonts/SF-UI-Text-Regular.otf)
 }
 
 @font-face {
@@ -74,6 +128,12 @@
 	font-weight: 600;
 	font-style: italic;
 	src: url(/local/fonts/SF-UI-Text-SemiboldItalic.otf)
+}
+
+@font-face {
+	font-family: sf text;
+	font-weight: 100;
+	src: url(/local/fonts/SF-UI-Text-Ultrathin.otf)
 }
 
 @font-face {
