--- a/www/font.css
+++ b/www/font.css
@@ -55,92 +55,92 @@
 @font-face {
 	font-family: sf text;
 	font-weight: 700;
-	src: url(/local/fonts/SF-UI-Text-Bold.otf)
+	src: url(/local/fonts/SF-UI-Text-Bold.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 700;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-BoldItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-BoldItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 800;
-	src: url(/local/fonts/SF-UI-Text-Heavy.otf)
+	src: url(/local/fonts/SF-UI-Text-Heavy.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 800;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-HeavyItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-HeavyItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 200;
-	src: url(/local/fonts/SF-UI-Text-Light.otf)
+	src: url(/local/fonts/SF-UI-Text-Light.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 200;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-LightItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-LightItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 500;
-	src: url(/local/fonts/SF-UI-Text-Medium.otf)
+	src: url(/local/fonts/SF-UI-Text-Medium.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 500;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-MediumItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-MediumItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 400;
-	src: url(/local/fonts/SF-UI-Text-Regular.otf)
+	src: url(/local/fonts/SF-UI-Text-Regular.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 400;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-RegularItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-RegularItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 600;
-	src: url(/local/fonts/SF-UI-Text-Semibold.otf)
+	src: url(/local/fonts/SF-UI-Text-Semibold.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 600;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-SemiboldItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-SemiboldItalic.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 100;
-	src: url(/local/fonts/SF-UI-Text-Ultrathin.otf)
+	src: url(/local/fonts/SF-UI-Text-Ultrathin.ttf)
 }
 
 @font-face {
 	font-family: sf text;
 	font-weight: 100;
 	font-style: italic;
-	src: url(/local/fonts/SF-UI-Text-UltrathinItalic.otf)
+	src: url(/local/fonts/SF-UI-Text-UltrathinItalic.ttf)
 }
 
 @font-face {
